kubernetes/apps/networking/traefik/errorpages/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-errorpages
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: traefik-errorpages
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: traefik-errorpages
    spec:
      containers:
      - name: error-pages
        image: ghcr.io/tarampampam/error-pages:4.2.1
        ports:
          - containerPort: 8080
