kubernetes/apps/networking/traefik/errorpages/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-errorpages
  namespace: "networking"
spec:
  selector:
    app.kubernetes.io/name: traefik-errorpages
  ports:
  - name: web
    protocol: TCP
    port: 8080
    targetPort: 8080
