kubernetes/apps/networking/traefik/errorpages/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-errorpages
  annotations:
    hajimari.io/enable: "false"
    traefik.ingress.kubernetes.io/router.priority: "10"
spec:
  ingressClassName: "${INGRESS_CLASS}"
  rules:
    - host: &host "deangalvin.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-errorpages
                port:
                  number: 8080
    - host: &host "*.deangalvin.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-errorpages
                port:
                  number: 8080
  tls:
    - hosts:
        - *host
      secretName: deangalvin-dev-production-tls
